[project]
name = "tripos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "gradio>=4.44.1",
    "gradio-image-prompter>=0.1.0",
    "gradio-litmodel3d>=0.0.1",
    "huggingface-hub>=0.29.3",
    "jaxtyping>=0.3.0",
    "numpy>=1.22.3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "peft>=0.15.1",
    "scikit-image>=0.25.2",
    "torch==2.5.0",
    "torch-cluster>=1.6.3",
    "torchvision>=0.20.0",
    "transformers>=4.50.3",
    "trimesh>=4.6.6",
]

[project.optional-dependencies]
space = [
    "spaces",
    "torchvision",
    "diffusers",
    "einops",
    "huggingface_hub",
    "opencv-python",
    "omegaconf",
    "scikit-image",
    "numpy",
    "peft",
    "scipy==1.11.4",
    "jaxtyping",
    "typeguard",
    "pymeshlab",
    "open3d",
    "timm",
    "kornia",
    "ninja",
    "diffrp-nvdiffrast",
    # "https://huggingface.co/spaces/JeffreyXiang/TRELLIS/resolve/main/wheels/nvdiffrast-0.3.3-cp310-cp310-linux_x86_64.whl?download=true",
    "cvcuda_cu12",
    "gltflib",
    "torch-cluster",
]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.5.0+cu124.html"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
